envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - name: ssh_listner
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 6003
      filter_chains:
        - filters:
            - name: envoy.tcp_proxy
              config:
                stat_prefix: egress_ssh
                cluster: ssh1_cluster

            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service1
                      domains: ["redis1.pooya.partdp.ir"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: ssh1_cluster }

#                    - name: local_service2
#                      domains: ["redis2.pooya.partdp.ir"]
#                      routes:
#                        - match: { prefix: "/" }
#                          route: { cluster: ssh2_cluster }
                http_filters:
                  - name: envoy.router

    - name: redis_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 6000
      use_original_dst: true
      filter_chains:
        - filters:
            - name: envoy.tcp_proxy
              config:
                stat_prefix: egress_redis
                cluster: redis1_cluster

#            - name: envoy.http_connection_manager
#              config:
#                stat_prefix: ingress_http
#                route_config:
#                  name: local_route
#                  virtual_hosts:
#                    - name: local_service1
#                      domains: ["redis1.pooya.partdp.ir"]
#                      routes:
#                        - match: { prefix: "/" }
#                          route: { cluster: redis1_cluster }
#
#                    - name: local_service2
#                      domains: ["redis2.pooya.partdp.ir"]
#                      routes:
#                        - match: { prefix: "/" }
#                          route: { cluster: redis2_cluster }
#                http_filters:
#                  - name: envoy.router

  clusters:
    - name: ssh1_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: MAGLEV
      hosts:
        - socket_address:
            address: proxy-ssh1
            port_value: 22

    - name: redis1_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: MAGLEV
      hosts:
        - socket_address:
            address: proxy-redis1
            port_value: 6379

    - name: redis2_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: MAGLEV
      hosts:
        - socket_address:
            address: proxy-redis1
            port_value: 6379
